@@ -1,3 +1,7 @@
+2011-12-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* keyring.py: Added support for Secret API.
+
 2011-12-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* dbus/networkstate.py, dbus/idelechck.py: Migrated to GDBus
